--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="shortcut icon" href="/image.png" type="image/x-icon" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@anuragmaurya" />
+    <meta name="twitter:title" content="Sol Devta" />
+    <meta name="twitter:description" content="Solana faucet for the devnet" />
+    <meta name="twitter:image" content="https://eb7cw7lpb6.ufs.sh/f/y8KqGYrvxK6gAvttIlZ0RO8TyGqmZWDINApCnd1J6wFe3tSK"
+    />
+    <title>Sol Devta</title>
   </head>
   <body>
     <div id="root"></div>
